--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "install-all": "npm install && npm --prefix backend install && npm --prefix frontend install",
-    "dev": "concurrently \"node backend/server\" \"npm --prefix frontend start\""
+    "dev": "concurrently \"node backend/server\" \"cd frontend && set BROWSER=none && npm start\""
   },
   "devDependencies": {
     "concurrently": "^9.1.2"
