--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
-    "jsonwebtoken": "^9.0.2",
+    "jose": "^6.0.11",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.1",
     "multer": "^1.4.5-lts.1",
