--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^19.0.4",
     "antd": "^5.25.0",
     "axios": "^1.9.0",
+    "mapbox-gl": "^3.12.0",
     "pickelball-project": "file:..",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
