--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@payos/node": "^1.0.10",
     "bcrypt": "5.1.1",
     "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.7",
